--- a/assets/style.css
+++ b/assets/style.css
@@ -218,6 +218,8 @@ header {
     position: absolute;
     bottom: 40px;
     display: flex;
+    width: 100%;
+    justify-content: center;
 }
 .dot {
     margin-inline: 5px;
